Finishing touch for index.html, link to recipes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>A few easy schoolday dinner recipes</h1>
+    <img src="./index-pic.jpeg" alt="family dinner" width="640" height="600"/>
+    <a href="./recipes/mexicanlasagna.html" target="_blank"><h2>Mexican Lasagna</h2></a>
+    <a href="./recipes/lemon-pepper-wings.html" target="_blank"><h2>Lemon Pepper Wings</h2></a>
+    <a href="./recipes/bolognese-stuffed-bell-peppers.html" target="_blank"><h2>Bolognese Stuffed Bell Peppers</h2></a>
 </body>
 </html>
